// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing respond function should fail due to no message was sent by the bot 1`] = `
Object {
  "message": "    
    expected: testing bot to send a message
    received: no message was sent
",
  "pass": false,
  "testName": "respond",
}
`;

exports[`testing respond function should get fail test due to bot returned different messages (expect embed and returned primitive) 1`] = `
Object {
  "message": "    
    expected: Object {
      \\"author\\": Object {
        \\"iconURL\\": \\"https://i.imgur.com/wSTFkRM.png\\",
        \\"name\\": \\"Some name\\",
        \\"url\\": \\"https://discord.js.org\\",
      },
      \\"color\\": 2123412,
      \\"description\\": \\"Some description here\\",
      \\"fields\\": Array [
        Object {
          \\"inline\\": false,
          \\"name\\": \\"Regular field title\\",
          \\"value\\": \\"Some value here\\",
        },
        Object {
          \\"inline\\": false,
          \\"name\\": \\"​\\",
          \\"value\\": \\"​\\",
        },
        Object {
          \\"inline\\": true,
          \\"name\\": \\"Inline field title\\",
          \\"value\\": \\"Some value here\\",
        },
        Object {
          \\"inline\\": true,
          \\"name\\": \\"Inline field title\\",
          \\"value\\": \\"Some value here\\",
        },
      ],
      \\"thumbnailUrl\\": Object {
        \\"url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
      },
      \\"title\\": \\"Some title\\",
      \\"url\\": \\"https://discord.js.org/\\",
    }
    received: 'this is the message content'
",
  "pass": false,
  "testName": "respond",
}
`;

exports[`testing respond function should get fail test due to bot returned different messages (expect primitive and returned embed) 1`] = `
Object {
  "message": "    
    expected: 'expect value'
    received: Object {
      \\"author\\": Object {
        \\"iconURL\\": \\"https://github.com/cordejs/corde/blob/master/website/static/img/logo/android-icon-192x192.png\\",
        \\"name\\": \\"cordeto\\",
        \\"url\\": undefined,
      },
      \\"color\\": 2123412,
      \\"description\\": \\"example description\\",
      \\"fields\\": Array [
        Object {
          \\"inline\\": false,
          \\"name\\": \\"field1\\",
          \\"value\\": \\"1\\",
        },
      ],
      \\"footer\\": Object {
        \\"iconURL\\": \\"iconURl example\\",
        \\"proxyIconURL\\": \\"proxyiconURl example\\",
        \\"text\\": \\"test example\\",
      },
      \\"image\\": Object {
        \\"height\\": 100,
        \\"url\\": \\"url example\\",
        \\"width\\": 100,
      },
      \\"thumbnailUrl\\": Object {
        \\"height\\": 100,
        \\"proxyURL\\": \\"proxy url example thumbnail\\",
        \\"url\\": \\"url example thumbnail\\",
        \\"width\\": 100,
      },
      \\"timestamp\\": 886761031000,
      \\"title\\": \\"Some title\\",
      \\"url\\": \\"url example\\",
    }
",
  "pass": false,
  "testName": "respond",
}
`;

exports[`testing respond function should get fail test due to bot returned different messages both primitive values 1`] = `
Object {
  "message": "    
    expected: 'expect value'
    received: 'this is the message content'
",
  "pass": false,
  "testName": "respond",
}
`;

exports[`testing respond function should get failed test due to bot returned equal messages (isNot true) 1`] = `
Object {
  "message": "    
    expected: message from bot be different from expectation
    received: both returned and expectation are equal
",
  "pass": false,
  "testName": "respond",
}
`;

exports[`testing respond function should return a failed test due to failure in message sending 1`] = `
Object {
  "message": "    
    expected: testing bot to send a message
    received: no message was sent
",
  "pass": false,
  "testName": "respond",
}
`;

exports[`testing respond function should return a failed test due to invalid parameter (null) 1`] = `
Object {
  "message": "    
    expected: expect value to be a primitive value (string, boolean, number) or an IMessageEmbed
    received: null
",
  "pass": false,
  "testName": "respond",
}
`;

exports[`testing respond function should return a failed test due to invalid parameter (null) 2`] = `
Object {
  "message": "    
    expected: expect value to be a primitive value (string, boolean, number) or an IMessageEmbed
    received: undefined
",
  "pass": false,
  "testName": "respond",
}
`;
